# fast-lint-mcp

./: .eslintrc.guardian.json  .eslintrc.json  .fast-lint-state.json  .gitignore  CHANGELOG.md  GEMINI.md  INSTALL_AGENT.md  MCP_DESIGN_PRINCIPLES.md  README.md  SKILLS_GUIDE.md  compiler_test.ts  complexity_test.ts  debug_analysis.ts  debug_cycle_benchmark.ts  debug_dep.json  debug_engine.ts  debug_graph_v2.ts  debug_kinds.ts  debug_rg_v2.ts  package-lock.json  package.json  react_test.tsx  regex_test.ts  test.js  testing_lib_test.ts  trivial_test.ts
.jules/: bolt.md
.test-semantic-project/: tsconfig.json
DOCS/: JEST_EXPO_GUIDE.md
native/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
native/src/: cache.rs  lib.rs  parser.rs  parser_rust.rs  resolver.rs
scripts/: setup_mcp.sh
src/: cli.ts  config.ts  constants.ts  db.ts  index.ts  state.ts
tests/: AnalysisService.test.ts  AnalysisService_coverage.test.ts  BaseQualityProvider.test.ts  JavascriptProvider.test.ts  JavascriptProvider_extra.test.ts  KotlinProvider.test.ts  Logger.test.ts  ReportService.test.ts  RustProvider.test.ts  SemanticService.test.ts  SymbolIndexer.test.ts  TsProgramManager.test.ts  analysis_fd.test.ts  analysis_import_check.test.ts  analysis_reviewer.test.ts  analysis_reviewer_js.test.ts  analysis_rg.test.ts  analysis_sg.test.ts  architecture.test.ts  cli.test.ts  config.test.ts  config_extra.test.ts  constants.test.ts  db.test.ts  dependency_graph.test.ts  env.test.ts  error_paths.test.ts  fixer.test.ts  handlers.test.ts  import_check_cache.test.ts  index.test.ts  (+46 more)
(+39 files in other folders)
