[package]
edition = "2021"
name = "fast-lint-core"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS 핵심 의존성
napi = { version = "2.12.2", default-features = false, features = ["napi3"] }
napi-derive = "2.12.2"
ignore = "0.4.22"
rayon = "1.10.0"
ast-grep-core = "0.40.5"
ast-grep-language = "0.40.5"
regex = "1.10.3"
petgraph = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
oxc_parser = "0.110.0"
oxc_allocator = "0.110.0"
oxc_ast = "0.110.0"
oxc_span = "0.110.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
